@@ -4,6 +4,9 @@ Changelog
 1.0b23 - Unreleased
 -------------------
 
+* Don't break when filter queries should be used for all parameters.
+  [reinhardt, witsch]
+
 * Always provide values for all metadata columns like the catalog does.
   [witsch]
 
